@@ -99,7 +99,7 @@ let
    in
     fun provein x S =
      case term_of S of
-        Const(@{const_name Set.empty}, _) => raise CTERM ("provein : not a member!", [S])
+        Const(@{const_name Orderings.bot}, _) => raise CTERM ("provein : not a member!", [S])
       | Const(@{const_name insert}, _) $ y $_ =>
          let val (cy,S') = Thm.dest_binop S
          in if term_of x aconv y then instantiate' [] [SOME x, SOME S'] insI1
