@@ -99,20 +99,10 @@ fun union_all xss = List.foldl (op union) [] xss;
 val const_trans_table =
       Symtab.make [(@{const_name "op ="}, "equal"),
                    (@{const_name HOL.less_eq}, "lessequals"),
-                   (@{const_name HOL.less}, "less"),
                    (@{const_name "op &"}, "and"),
                    (@{const_name "op |"}, "or"),
-                   (@{const_name HOL.plus}, "plus"),
-                   (@{const_name HOL.minus}, "minus"),
-                   (@{const_name HOL.times}, "times"),
-                   (@{const_name Divides.div}, "div"),
-                   (@{const_name HOL.divide}, "divide"),
                    (@{const_name "op -->"}, "implies"),
-                   (@{const_name Set.empty}, "emptyset"),
                    (@{const_name "op :"}, "in"),
-                   (@{const_name union}, "union"),
-                   (@{const_name inter}, "inter"),
-                   ("List.append", "append"),
                    ("ATP_Linkup.fequal", "fequal"),
                    ("ATP_Linkup.COMBI", "COMBI"),
                    ("ATP_Linkup.COMBK", "COMBK"),
